--- a/alembic.ini
+++ b/alembic.ini
@@ -51,7 +51,8 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://user:password@localhost:5432/fastapi_enterprise
+# Database URL for Docker environment
+sqlalchemy.url = postgresql+asyncpg://postgres:password@db:5432/fastapi_enterprise
 
 
 [post_write_hooks]
