--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ asyncpg = "^0.29"
 alembic = "^1.13"
 structlog = "^24.1"
 python-dotenv = "^1.0"
+python-jose = {extras = ["cryptography"], version = "^3.5.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4"
