--- a/alembic.ini
+++ b/alembic.ini
@@ -34,7 +34,7 @@ prepend_sys_path = .
 # sourceless = false
 
 # version number format
-version_num_format = %04d
+version_num_format = %%04d
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses
@@ -52,7 +52,7 @@ version_path_separator = os
 # output_encoding = utf-8
 
 # Database URL for Docker environment
-sqlalchemy.url = postgresql+asyncpg://postgres:password@db:5432/fastapi_enterprise
+sqlalchemy.url = postgresql+asyncpg://postgres:password@localhost:5432/fastapi_enterprise
 
 
 [post_write_hooks]
